[package]
name = "tree-sitter-quasar"
description = "A tree-sitter grammar for the Quasar programming language"
version = "1.0.0"
authors = ["Graikos Parmenion <par.graikos@icloud.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "quasar"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/parmeniong/tree-sitter-quasar"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
